# zor

./: CMakeLists.txt  ReadMe.md  headers.cmake  include_google_test.cmake  sources.cmake  zor.map.txt
examples/: example-0.c
include/: zor.h  zor_simd_defines.h
src/: zor.c
